fix: missing background in delete message popout

--- a/src/_theme.scss
+++ b/src/_theme.scss
@@ -382,6 +382,10 @@ div[class^="layerContainer"] {
 					color: $red !important;
 				}
 			}
+
+			div[class*="message-"] {
+				background-color: $base !important;
+			}
 		}
 	}
 
